--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -2,7 +2,7 @@
 
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
-<head th:include="includes :: indexHead"></head>
+<head th:include="fragments/includes :: indexHead"></head>
 <body>
 <div th:fragment="navHome">
             <ul id="dropdown1" class="dropdown-content" >
@@ -37,7 +37,7 @@
                     <li><a sec:authorize="hasRole('ROLE_COMPANY')" th:href="@{/company/find-bands}">Find a Band</a></li>
                     <li><a sec:authorize="hasRole('ROLE_MUSICIAN')" th:href="@{/musician/find-bands}">Find a Band</a></li>
 
-                    <li sec:authorize="!isAuthenticated()"><a  class="modal-trigger" id="logBtn" href="#signupModal" style="margin-right: 0px;">Login</a></li>
+                    <li sec:authorize="!isAuthenticated()"><a  class="modal-trigger logBtn" href="#signupModal" style="margin-right: 0px;">Login</a></li>
                     <li sec:authorize="hasRole('ROLE_COMPANY')">
                         <a class="dropdown-button valign-wrapper" href="#!" data-activates="dropdown1" data-constrainwidth="false" th:inline="text">
                             [[${user.username}]] <img th:src="@{${companyProfile.companyProfPic}} " class="navAvatar circle"/>
@@ -56,7 +56,7 @@
 
 </div>
 
-<span th:include="includes :: js"></span>
+<span th:include="fragments/includes :: js"></span>
 
 </body>
 </html>
