--- a/src/main/resources/templates/Messages/gigSuccess.html
+++ b/src/main/resources/templates/Messages/gigSuccess.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
-<head th:include="includes :: indexHead"></head>
-<body th:inline="text" class="blue-grey lighten-5">
-<div th:include="navbar :: navHome"></div>
+<head th:include="fragments/includes :: indexHead"></head>
+<body th:inline="text" class="grey lighten-1">
+<div th:include="fragments/navbar :: navHome"></div>
 <main class="success container center-align valign-wrapper">
 <div class="card-panel">
     <h3>Great! You applied successfully for: </h3>
@@ -25,8 +25,8 @@
 
 </main>
 
-<div th:include="footer :: footer"></div>
-<span th:include="includes :: js"></span>
+<div th:include="fragments/footer :: footer"></div>
+<span th:include="fragments/includes :: js"></span>
 
 </body>
 </html>
