--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
-<head th:include="includes :: indexHead"></head>
+<head th:include="fragments/includes :: indexHead"></head>
 <body class="blue-grey lighten-5">
-<div th:include="navbar :: navHome"></div>
+<div th:include="fragments/navbar :: navHome"></div>
 <main th:inline="text" class="container">
 
 <h1>Welcome, [[${user.username}]]</h1>
@@ -54,7 +54,7 @@
 
 
 </main>
-<span th:include="includes :: js"></span>
+<span th:include="fragments/includes :: js"></span>
 
 </body>
 </html>
