--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
-<head th:include="includes :: indexHead"></head>
+<head th:include="fragments/includes :: indexHead"></head>
 <body class=" login">
 <main class="login">
     <div class="container ">
                 <div class="card-panel center-align loginCard">
-                    <h1 class="loginLogo center-align"><a href="/" >gigFinder</a></h1>
-                    <div class="card medium z-depth-5 valign-wrapper">
+                    <h1 class="loginLogo center-align"><a href="/" class="orange-text text-accent-4">gigFinder</a></h1>
+                    <div class="card z-depth-5">
                         <div class="card-content">
-                            <h1 class="center-align">LOGIN</h1>
+                            <h3 class="center-align">LOGIN</h3>
                             <div th:text="${message}"></div>
                             <div style="color: red;" th:text="${error}"></div>
 
@@ -31,16 +31,8 @@
                         </div>
                     </div>
                 </div>
-
-
-
-
-
     </div>
 </main>
-
-<div th:include="modals :: signupModal"></div>
-
-<span th:include="includes :: js"></span>
+<span th:include="fragments/includes :: js"></span>
 </body>
 </html>
