--- a/src/main/resources/templates/musicianDetails.html
+++ b/src/main/resources/templates/musicianDetails.html
@@ -1,61 +1,123 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
-<head th:include="includes :: indexHead"></head>
-<body class="blue-grey lighten-5">
-<div th:include="navbar :: navHome"></div>
+<head th:include="fragments/includes :: indexHead"></head>
+<body class="grey lighten-1">
 <main th:inline="text" >
-    <section class="blue darken-2 profileBanner" th:style="'background:url('+ @{${musicianProfile.coverPicImage}}+'); background-size: cover; background-repeat: no-repeat; background-position: center;'">
-        <div class="white-text center-align bannerBio ">
-            <h4  th:text="${musicianProfile.firstName} +' '+ ${musicianProfile.lastName}"></h4>
-            <h5> "[[${musicianProfile.bio}]]"</h5>
+    <section class="blue darken-2 profileBanner" th:style="'background:url('+ @{${musicianDetail.coverPicImage}}+'); background-size: cover; background-repeat: no-repeat; background-position: center;'">
+        <div th:include="fragments/navbar :: navHome"></div>
+
+        <div class="white-text center-align  bannerBio ">
+            <h4>[[${musicianDetail.firstName}]] [[${musicianDetail.lastName}]]</h4>
+            <h5 > [[${musicianDetail.location}]]</h5>
+
         </div>
-        <div class="picParentDetail" >
-            <img class="profPic circle z-depth-5 responsive-img" th:src="@{${musicianProfile.profPicImage}}" th:alt="${user.username}"/>
+
+    </section>
+    <section class="container">
+        <div class=" row">
+            <div class="col s12 m4">
+                <div class="profCol z-depth-5">
+                    <div class="profImage" th:style="'background:url('+ @{${musicianDetail.profPicImage}}+'); background-size: cover; background-repeat: no-repeat; background-position: center; height: 400px;'">
+                    </div>
+                    <div class="profInfo white">
+                        <section >
+                            <div class="section">
+                                <p class="valign-wrapper"><i class="orange-text text-accent-4 material-icons">star</i> [[${musicianDetail.musicianInstruments}]]</p>
+
+                            </div>
+
+                            <div class="divider"></div>
+                            <div class="section">
+                                <p class="valign-wrapper" >
+                                    <a class="email valign-wrapper tooltipped white-text" data-position="top" data-delay="50" data-tooltip="Email Me" th:href="'mailto:'+@{${musicianDetail.user.email}}">
+                                        <i class="orange-text text-accent-4 material-icons">email</i>
+                                        [[${musicianDetail.user.email}]]
+                                    </a>
+                                </p>
+                                <p class="valign-wrapper"><i class="orange-text text-accent-4 material-icons">local_phone</i> [[${musicianDetail.user.phoneNumber}]]</p>
+
+
+                            </div>
+
+                            <div class="divider"></div>
+                            <div class="section">
+                                <p> [[${musicianDetail.bio}]]</p>
+
+                            </div>
+
+                        </section>
+                    </div>
+                </div>
+            </div>
+            <div class="col s12 m8">
+                <div class="row">
+                    <div class="col s12">
+                        <ul class="tabs z-depth-4">
+                            <li class="tab col s6"><a href="#music">My Music</a></li>
+                            <li class="tab col s6"><a href="#upEvents">Hired Events</a></li>
+                        </ul>
+                    </div>
+                    <div id="music" class="col s12 container">
+                        <div class=" musicCard">
+
+                            <h4 class="center-align">My Music
+                                <div th:if="${media.isEmpty()}">
+                                    <h5>No Music</h5>
+                                </div>
+                            </h4>
+                            <div class="card container musicTable">
+                                <table class="bordered white ">
+                                    <tr  th:each="media : ${media}">
+                                        <td class="valign-wrapper">
+                                            <i class="orange-text text-accent-4 material-icons">play_circle_filled</i>
+                                            <a class="popup-youtube" th:href="@{${media.media_url}}">[[${media.title}]]</a>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div id="upEvents" class="col s12">
+                        <h4 class="center-align">Upcoming Events</h4>
+                        <div th:if="${hired.isEmpty()}">
+                            <h5 class="center-align">No Upcoming Events</h5>
+                        </div>
+                        <div class="row"  >
+                            <div class="col s12 m4" th:each="hired : ${hired}">
+                                <div  class="gigCard hoverable">
+                                    <div class="gigImage" th:style="'background:url('+ @{${hired.gig.gigArt}}+'); background-size: cover; background-repeat: no-repeat; background-position: center; height: 150px;'">
+                                        <div class="dateBox white orange-text text-accent-4 center-align">
+                                            <h4>[[${#dates.format(hired.gig.gigStart,'d')}]]</h4>
+                                            <p>[[${#dates.format(hired.gig.gigStart,'MMMM')}]]</p>
+                                        </div>
+                                        <a sec:authorize="hasRole('ROLE_MUSICIAN')" class="goBtn right waves-effect waves-light white-text orange accent-4 btn-floating " th:href="'/musician/gig/' + @{${hired.gig.id}}"><i class="material-icons">arrow_forward</i></a>
+                                        <a sec:authorize="hasRole('ROLE_COMPANY')" class="goBtn right waves-effect waves-light white-text orange accent-4 btn-floating " th:href="'/company/gig/' + @{${hired.gig.id}}"><i class="material-icons">arrow_forward</i></a>
+
+                                    </div>
+                                    <div class="gigInfo white center-align">
+                                        <p><b>[[${hired.gig.gigTitle}]]</b></p>
+                                        <p >[[${hired.gig.gigLocation}]]</p>
+
+                                    </div>
+                                </div>
+                            </div>
+
+
+                        </div>
+                    </div>
+
+
+                </div>
+
+            </div>
+
         </div>
     </section>
-<section >
-    <div class="row bioRow black white-text">
-        <div class="col s3 offset-l3">
-            <p  class="valign-wrapper"><i class="orange-text text-accent-4 material-icons">account_circle</i> [[${musicianProfile.user.username}]]</p>
-            <p class="valign-wrapper"><i class="orange-text text-accent-4 material-icons">location_on</i> [[${musicianProfile.location}]]</p>
-        </div>
-        <div class="col s3">
-            <p  >
-                <a class="email valign-wrapper tooltipped white-text" data-position="top" data-delay="50" data-tooltip="Email Me" th:href="'mailto:'+@{${musicianProfile.musicianEmail}}">
-                    <i class="orange-text text-accent-4 material-icons">email</i>
-                    [[${musicianProfile.musicianEmail}]]
-                </a>
-            </p>
-            <p class="valign-wrapper"><i class="orange-text text-accent-4 material-icons">star</i> [[${musicianProfile.musicianInstruments}]]</p>
-
-        </div>
-        <div class="col s3">
-
-        </div>
-
-    </div>
-
-</section>
-
-<section class="container">
-        <h1>[[${musicianProfile.firstName}]] [[${musicianProfile.lastName}]] Music</h1>
-        <table class="bordered white  " >
-            <tr  th:each="media : ${media}">
-                <td class="valign-wrapper">
-                    <i class="orange-text text-accent-4 material-icons">music_note</i>
-                    <a  th:href="@{${media.media_url}}" target="_blank"  th:text="${media.title}" class="mediaTitle"></a>
-                </td>
-            </tr>
-        </table>
-
-
-
-</section>
 </main>
-<div th:include="footer :: footer"></div>
-<div th:include="modals :: signupModal"></div>
+<div th:include="fragments/footer :: footer"></div>
 
-<span th:include="includes :: js"></span>
+<span th:include="fragments/includes :: js"></span>
 </body>
 </html>
