--- a/src/main/resources/templates/musicianProfile.html
+++ b/src/main/resources/templates/musicianProfile.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
-<head th:include="includes :: indexHead"></head>
-<body th:inline="text" class="blue-grey lighten-5">
+<head th:include="fragments/includes :: indexHead"></head>
+<body th:inline="text" class=" grey lighten-1">
 
-<div th:include="navbar :: navHome"></div>
 
 <main  th:inline="text">
     <section class="blue darken-2 profileBanner" th:style="'background:url('+ @{${musicianProfile.coverPicImage}}+'); background-size: cover; background-repeat: no-repeat; background-position: center;'">
+    <div th:include="fragments/navbar :: navHome"></div>
 
         <a href="#coverMusicianPic" class="modal-trigger tooltipped" data-position="right" data-delay="50" data-tooltip="Update Cover Image"><i class="coverBanner text-accent-4 material-icons">camera_alt</i></a>
-        <div class="white-text  bannerBio ">
-            <h4>[[${musicianProfile.firstName}]] [[${musicianProfile.lastName}]] -- [[${user.username}]]</h4>
-            <p > [[${musicianProfile.location}]]</p>
+        <div class="white-text bannerBio ">
+            <h4>[[${musicianProfile.firstName}]] [[${musicianProfile.lastName}]]</h4>
+            <h5 > [[${musicianProfile.location}]]</h5>
 
         </div>
 
     </section>
-
-    <div class="profileDetails row">
+<section class="container">
+    <div class=" row">
         <div class="col s12 m4">
             <div class="profCol z-depth-5">
                 <div class="profImage" th:style="'background:url('+ @{${musicianProfile.profPicImage}}+'); background-size: cover; background-repeat: no-repeat; background-position: center; height: 400px;'">
@@ -36,13 +36,12 @@
 
                         </div>
 
-                            <div class="divider"></div>
-<div class="section">
-    <p class="valign-wrapper"><i class="orange-text text-accent-4 material-icons">email</i> [[${musicianProfile.musicianEmail}]] </p>
-    <p class="valign-wrapper"><i class="orange-text text-accent-4 material-icons">local_phone</i> [[${musicianProfile.musicianPhoneNumber}]]</p>
+                        <div class="divider"></div>
+                        <div class="section">
+                            <p class="valign-wrapper"><i class="orange-text text-accent-4 material-icons">email</i> [[${musicianProfile.user.email}]] </p>
+                            <p class="valign-wrapper"><i class="orange-text text-accent-4 material-icons">local_phone</i> [[${musicianProfile.user.phoneNumber}]]</p>
 
-    <p class="valign-wrapper"><i class="orange-text text-accent-4 material-icons">cake</i> [[${#dates.format(musicianProfile.birthDate,'MMM d, yyyy')}]]</p>
-</div>
+                        </div>
 
                         <div class="divider"></div>
                         <div class="section">
@@ -51,7 +50,6 @@
                         </div>
 
                     </section>
-                    <section ></section>
                 </div>
             </div>
         </div>
@@ -60,13 +58,13 @@
                 <div class="col s12">
                     <ul class="tabs z-depth-4">
                         <li class="tab col s3"><a href="#music">My Music</a></li>
-                        <li class="tab col s3"><a href="#upEvents">Upcoming Events</a></li>
+                        <li class="tab col s3"><a href="#upEvents">Hired Events</a></li>
                         <li class="tab col s3"><a href="#areaGigs">Gigs in Area</a></li>
                         <li class="tab col s3"><a href="#appliedGigs">Applied Gigs</a></li>
                     </ul>
                 </div>
                 <div id="music" class="col s12 container">
-                    <div class="card musicCard">
+                    <div class=" musicCard">
 
                         <h4 class="center-align">My Music
                             <span>
@@ -76,12 +74,13 @@
                                 <h5>Add Your Music</h5>
                             </div>
                         </h4>
-                        <div class="card container musicTable">
+                        <div class="card  musicTable">
                             <table class="bordered white ">
                                 <tr  th:each="media : ${media}">
                                     <td class="valign-wrapper">
                                         <i class="orange-text text-accent-4 material-icons">play_circle_filled</i>
-                                        <a  th:href="@{${media.media_url}}" target="_blank"  th:text="${media.title}" class="mediaTitle"></a>
+                                        <a class="popup-youtube" th:href="@{${media.media_url}}">[[${media.title}]]</a>
+
                                     </td>
                                     <td>
                                         <a class="waves-effect waves-light modal-trigger btn-flat float-right" th:href="'#mediaUpdate' + ${media.id}">
@@ -95,7 +94,7 @@
                                             </button>
                                         </form>
                                     </td>
-                                    <div th:include="modals :: mediaUpdate"></div>
+                                    <div th:include="fragments/modals :: mediaUpdate"></div>
                                 </tr>
                             </table>
                         </div>
@@ -109,18 +108,18 @@
                     </div>
                     <div class="row"  >
                         <div class="col s12 m4" th:each="hired : ${hired}">
-                            <div class="gigCard z-depth-2">
+                            <div  class="gigCard hoverable">
                                 <div class="gigImage" th:style="'background:url('+ @{${hired.gig.gigArt}}+'); background-size: cover; background-repeat: no-repeat; background-position: center; height: 150px;'">
                                     <div class="dateBox white orange-text text-accent-4 center-align">
                                         <h4>[[${#dates.format(hired.gig.gigStart,'d')}]]</h4>
                                         <p>[[${#dates.format(hired.gig.gigStart,'MMMM')}]]</p>
                                     </div>
+                                    <a sec:authorize="hasRole('ROLE_MUSICIAN')" class="goBtn right waves-effect waves-light white-text orange accent-4 btn-floating " th:href="'/musician/gig/' + @{${hired.gig.id}}"><i class="material-icons">arrow_forward</i></a>
+
                                 </div>
                                 <div class="gigInfo white center-align">
                                     <p><b>[[${hired.gig.gigTitle}]]</b></p>
                                     <p >[[${hired.gig.gigLocation}]]</p>
-                                    <div class="divider"></div>
-                                    <a class=" waves-effect waves-light white-text orange accent-4 hoverable gigApplied " th:href="'/musician/gig/' + @{${hired.gig.id}}">More Info</a>
 
                                 </div>
                             </div>
@@ -139,23 +138,23 @@
                         <h5>No Gigs found in your area</h5>
                     </div>
                     <div class="row"  >
-<div class="col s12 m4" th:each="gig : ${gig}">
-    <div class="gigCard z-depth-2">
-        <div class="gigImage" th:style="'background:url('+ @{${gig.gigArt}}+'); background-size: cover; background-repeat: no-repeat; background-position: center; height: 150px;'">
-            <div class="dateBox white orange-text text-accent-4 center-align">
-                <h4>[[${#dates.format(gig.gigStart,'d')}]]</h4>
-                <p>[[${#dates.format(gig.gigStart,'MMMM')}]]</p>
-            </div>
-        </div>
-        <div class="gigInfo white center-align">
-            <p><b>[[${gig.gigTitle}]]</b></p>
-            <p >[[${gig.gigLocation}]]</p>
-            <div class="divider"></div>
-            <a class=" waves-effect waves-light white-text orange accent-4 hoverable gigApplied " th:href="'/musician/gig/' + @{${gig.id}}">More Info</a>
+                        <div class="col s12 m4" th:each="gig : ${gig}" th:if="${gig.gigHired} != true">
+                            <div  class="gigCard hoverable">
+                                <div class="gigImage" th:style="'background:url('+ @{${gig.gigArt}}+'); background-size: cover; background-repeat: no-repeat; background-position: center; height: 150px;'">
+                                    <div class="dateBox white orange-text text-accent-4 center-align">
+                                        <h4>[[${#dates.format(gig.gigStart,'d')}]]</h4>
+                                        <p>[[${#dates.format(gig.gigStart,'MMMM')}]]</p>
+                                    </div>
+                                    <a sec:authorize="hasRole('ROLE_MUSICIAN')" class="goBtn right waves-effect waves-light white-text orange accent-4 btn-floating " th:href="'/musician/gig/' + @{${gig.id}}"><i class="material-icons">arrow_forward</i></a>
 
-        </div>
-    </div>
-</div>
+                                </div>
+                                <div class="gigInfo white center-align">
+                                    <p><b>[[${gig.gigTitle}]]</b></p>
+                                    <p >[[${gig.gigLocation}]]</p>
+
+                                </div>
+                            </div>
+                        </div>
 
 
                     </div>
@@ -163,45 +162,47 @@
                 <div id="appliedGigs" class="col s12">
                     <h4 class="center-align">Applied Gigs</h4>
 
-<div class="row">
-    <div class="col s12 m4" th:each="applied : ${applied}" >
-        <div class="gigCard z-depth-2">
-            <div class="gigImage" th:style="'background:url('+ @{${applied.gig.gigArt}}+'); background-size: cover; background-repeat: no-repeat; background-position: center; height: 150px;'">
-                <div class="dateBox white orange-text text-accent-4 center-align">
-                    <h4>[[${#dates.format(applied.gig.gigStart,'d')}]]</h4>
-                    <p>[[${#dates.format(applied.gig.gigStart,'MMMM')}]]</p>
+                    <div class="row">
+                        <div class="col s12 m4" th:each="applied : ${applied}" th:if="${applied.gig.gigHired} != true">
+                            <div  class="gigCard hoverable">
+                                <div class="gigImage" th:style="'background:url('+ @{${applied.gig.gigArt}}+'); background-size: cover; background-repeat: no-repeat; background-position: center; height: 150px;'">
+                                    <div class="dateBox white orange-text text-accent-4 center-align">
+                                        <h4>[[${#dates.format(applied.gig.gigStart,'d')}]]</h4>
+                                        <p>[[${#dates.format(applied.gig.gigStart,'MMMM')}]]</p>
+                                    </div>
+                                    <a sec:authorize="hasRole('ROLE_MUSICIAN')" class="goBtn right waves-effect waves-light white-text orange accent-4 btn-floating " th:href="'/musician/gig/' + @{${applied.gig.id}}"><i class="material-icons">arrow_forward</i></a>
+
+                                </div>
+                                <div class="gigInfo white center-align">
+                                    <p><b>[[${applied.gig.gigTitle}]]</b></p>
+                                    <p >[[${applied.gig.gigLocation}]]</p>
+
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+
                 </div>
             </div>
-            <div class="gigInfo white center-align">
-                <p><b>[[${applied.gig.gigTitle}]]</b></p>
-                <p >[[${applied.gig.gigLocation}]]</p>
-                <div class="divider"></div>
-                <a class=" waves-effect waves-light white-text orange accent-4 hoverable gigApplied " th:href="'/musician/gig/' + @{${applied.gig.id}}">More Info</a>
 
-            </div>
         </div>
 
     </div>
-</div>
+</section>
 
-                </div>
-            </div>
-
-        </div>
-
-    </div>
 
 
 
 
 </main>
-<div th:include="modals :: coverMusicianPic"></div>
-<div th:include="modals :: profMusicianPic"></div>
+<div th:include="fragments/modals :: coverMusicianPic"></div>
+<div th:include="fragments/modals :: profMusicianPic"></div>
+<div th:include="fragments/modals :: musicianUpdate"></div>
+<div th:include="fragments/modals :: createMedia"></div>
 
-<div th:include="footer :: footer"></div>
-<div th:include="modals :: musicianUpdate"></div>
-<div th:include="modals :: createMedia"></div>
-<span th:include="includes :: js"></span>
+<div th:include="fragments/footer :: footer"></div>
+<span th:include="fragments/includes :: js"></span>
 
 </body>
 </html>
